Use exec to make methods, attempt to get type checking to work nicely

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "dataclasses_struct"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+typing-extensions = "^4.5.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
