--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ pytest = "^7.2.2"
 
 [tool.pytest.ini_options]
 testpaths = ["test"]
+markers = [
+	"cc: marks a test as requiring a C compiler"
+]
 
 [build-system]
 requires = ["poetry-core"]
