--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,15 +6,12 @@ on:
 
 jobs:
   tests:
-    name: ${{ matrix.os }} / ${{ matrix.pyversion }}
-    runs-on: ${{ matrix.image }}
     strategy:
       matrix:
-        os: [Ubuntu, Windows]
         pyversion: ["3.10"]
-        include:
-          - os: Ubuntu
-            image: ubuntu-22.04
+        image: ["ubuntu-22.04"]
+    name: ${{ matrix.image }} / ${{ matrix.pyversion }}
+    runs-on: ${{ matrix.image }}
     defaults:
       run:
         shell: bash
