--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
   tests:
     strategy:
       matrix:
-        pyversion: ["3.10"]
+        pyversion: ["3.8", "3.9", 3.10", "3.11"]
         image: ["ubuntu-22.04"]
     name: ${{ matrix.image }} / ${{ matrix.pyversion }}
     runs-on: ${{ matrix.image }}
