--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,4 +55,8 @@ jobs:
         run: poetry run mypy
 
       - name: Run tests
-        run: poetry run pytest
+        run: poetry run pytest --cov
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        if: matrix.os == 'Ubuntu' && matrix.pyversion == '3.10'
