--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,8 +55,9 @@ jobs:
         run: poetry run mypy
 
       - name: Run tests
-        run: poetry run pytest --cov
+        run: poetry run pytest --cov --cov-report=xml
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
+        files: coverage.xml
         if: matrix.os == 'Ubuntu' && matrix.pyversion == '3.10'
