--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,5 +59,6 @@ jobs:
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
-        files: coverage.xml
         if: matrix.os == 'Ubuntu' && matrix.pyversion == '3.10'
+        with:
+          files: coverage.xml
