--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ flake8 = "^6.0.0"
 mypy = "^1.1.1"
 pytest = "^7.2.2"
 pytest-cov = "^4.0.0"
+pytest-mypy-plugins = "^1.10.1"
 
 [tool.pytest.ini_options]
 testpaths = ["test"]
