--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.pyversion }}
+          cache: 'pip'
 
       - name: Install Poetry
         run: pip install poetry==1.4.0
