--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,14 +26,14 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      - name: Specify Poetry dependency
+        run: echo 'poetry==1.4.1' > requirements.txt
+
       - name: Set up Python ${{ matrix.pyversion }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.pyversion }}
           cache: 'pip'
-
-      - name: Install Poetry
-        run: pip install poetry==1.4.0
 
       - name: Configure Poetry
         run: poetry config virtualenvs.in-project true
