Switch linter to ruff instead of flake8

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,6 @@ repos:
     hooks:
       - id: flake8
         name: flake8
-        entry: poetry run flake8
+        entry: poetry run ruff check .
         language: system
         types: [python]
