--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,11 @@ python = "^3.8.1"
 typing-extensions = "^4.5.0"
 
 [tool.poetry.group.dev.dependencies]
-flake8 = "^6.0.0"
 mypy = "^1.1.1"
 pytest = "^7.2.2"
 pytest-cov = "^4.0.0"
 pytest-mypy-plugins = "^1.10.1"
+ruff = "^0.0.282"
 
 [tool.pytest.ini_options]
 testpaths = ["test"]
@@ -30,6 +30,12 @@ markers = [
 [tool.coverage.run]
 source = ["dataclasses_struct/"]
 omit = ["dataclasses_struct/ext/**/*.py", "dataclasses_struct/sizes.py"]
+
+[tool.ruff]
+select = [
+	"E", # pycodestyle
+	"F", # pyflakes
+]
 
 [build-system]
 requires = ["poetry-core"]
