--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,8 +36,10 @@ select = [
 	"E", # pycodestyle
 	"F", # pyflakes
 	"I", # isort
+	"UP", # pyupgrade
 ]
 fixable = ["I"]
+target-version = "py38"
 
 [build-system]
 requires = ["poetry-core"]
