Re-add flake8 since ruff doesn't support all pycodestyle rules

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,7 +57,9 @@ jobs:
         if: matrix.os == 'Windows'
 
       - name: Lint
-        run: poetry run ruff check --exclude .venv .
+        run: |
+          poetry run flake8 --exclude .venv &&
+          poetry run ruff check --exclude .venv .
 
       - name: Python type checking
         run: poetry run mypy
