--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,13 @@
 repos:
   - repo: local
     hooks:
+      - id: ruff
+        name: ruff
+        entry: poetry run ruff check .
+        language: system
+        types: [python]
       - id: flake8
         name: flake8
-        entry: poetry run ruff check .
+        entry: poetry run flake8
         language: system
         types: [python]
