--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pytest = "^7.2.2"
 pytest-cov = "^4.0.0"
 pytest-mypy-plugins = "^1.10.1"
 ruff = "^0.0.282"
+flake8 = "^6.1.0"
 
 [tool.pytest.ini_options]
 testpaths = ["test"]
