--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,14 +13,16 @@ packages = [{include = "dataclasses_struct"}]
 [tool.poetry.dependencies]
 python = "^3.8.1"
 typing-extensions = "^4.5.0"
+mypy = "^1.9.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.1.1"
 pytest = "^7.2.2"
 pytest-cov = "^4.0.0"
 pytest-mypy-plugins = "^1.10.1"
-ruff = "^0.0.282"
-flake8 = "^6.1.0"
+ruff = "^0.2.2"
+flake8 = "^7.0.0"
+
 
 [tool.pytest.ini_options]
 testpaths = ["test"]
@@ -28,20 +30,24 @@ markers = [
 	"cc: marks a test as requiring a C compiler"
 ]
 
+
 [tool.coverage.run]
 source = ["dataclasses_struct/"]
 omit = ["dataclasses_struct/ext/**/*.py", "dataclasses_struct/sizes.py"]
 
+
 [tool.ruff]
+line-length = 79
+target-version = "py38"
+
+[tool.ruff.lint]
 select = [
 	"E", "W", # pycodestyle errors and warnings
 	"F", # pyflakes
 	"I", # isort
 	"UP", # pyupgrade
 ]
-fixable = ["I"]
-line-length = 79
-target-version = "py38"
+
 
 [build-system]
 requires = ["poetry-core"]
