--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,9 @@
 repos:
-  - repo: local
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.2.2
     hooks:
       - id: ruff
-        name: ruff
-        entry: poetry run ruff check .
-        language: system
-        types: [python]
+  - repo: https://github.com/pycqa/flake8
+    rev: 7.0.0
+    hooks:
       - id: flake8
-        name: flake8
-        entry: poetry run flake8
-        language: system
-        types: [python]
