Update plugin test

--- a/test/test-mypy-plugin.yml
+++ b/test/test-mypy-plugin.yml
@@ -36,7 +36,7 @@
 
     reveal_type(Test.__dataclass_struct__.size)  # N: Revealed type is "builtins.int"
     reveal_type(Test.__dataclass_struct__.format)  # N: Revealed type is "builtins.str"
-    reveal_type(Test.__dataclass_struct__.endianness)  # N: Revealed type is "builtins.str"
+    reveal_type(Test.__dataclass_struct__.mode_char)  # N: Revealed type is "builtins.str"
 
 
 - case: test_from_packed_returns_instance
