--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
   tests:
     strategy:
       matrix:
-        pyversion: ["3.8", "3.9", "3.10", "3.11"]
+        pyversion: ["3.8", "3.9", "3.10", "3.11", "3.12"]
         os: ["Ubuntu", "Windows", "macOS"]
         include:
           - os: Windows
