--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,11 +14,11 @@ jobs:
         os: ["Ubuntu", "Windows", "macOS"]
         include:
           - os: Windows
-            image: windows-2022
+            image: windows-latest
           - os: Ubuntu
-            image: ubuntu-22.04
+            image: ubuntu-latest
           - os: macOS
-            image: macos-12
+            image: macos-latest
     name: ${{ matrix.os }} / ${{ matrix.pyversion }}
     runs-on: ${{ matrix.image }}
     defaults:
