--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ mypy = [
 pytest = "^7.2.2"
 pytest-cov = "^4.0.0"
 pytest-mypy-plugins = "^1.10.1"
-ruff = "^0.6.5"
+ruff = "^0.8.0"
 flake8 = "^7.0.0"
 
 
@@ -67,6 +67,7 @@ select = [
 	"E", "W", # pycodestyle errors and warnings
 	"F", # pyflakes
 	"I", # isort
+    "RUF", # ruff-specific
 	"UP", # pyupgrade
 ]
 
