--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
-[tool.poetry]
+[project]
 name = "dataclasses-struct"
 version = "0.8.4"
 description = "Converting dataclasses to and from fixed-length binary data using struct"
-authors = ["Harry Mander <harrymander96@gmail.com>"]
-license = "MIT"
 readme = "README.md"
+authors = [
+    { name = "Harry Mander", email = "harrymander96@gmail.com" }
+]
 homepage = "https://github.com/harrymander/dataclasses-struct"
 repository = "https://github.com/harrymander/dataclasses-struct"
 documentation = "https://github.com/harrymander/dataclasses-struct/blob/main/README.md#usage"
-packages = [{include = "dataclasses_struct"}]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Programming Language :: Python",
@@ -29,21 +29,24 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Typing :: Typed",
 ]
-
-[tool.poetry.dependencies]
-python = "^3.8.1"
-typing-extensions = { version = "^4.5.0", python = "<3.11" }
-
-[tool.poetry.group.dev.dependencies]
-mypy = [
-    { version = "^1.15.0", python = ">=3.9,<4.0.0" },
-    { version = "^1.14.1", python = "<3.9" },
+requires-python = ">=3.8.1"
+dependencies = [
+    "typing-extensions>=4.12.2 ; python_full_version < '3.11'",
 ]
-pytest = "^7.2.2"
-pytest-cov = "^4.0.0"
-pytest-mypy-plugins = "^1.10.1"
-ruff = "^0.8.0"
-flake8 = "^7.0.0"
+
+[dependency-groups]
+dev = [
+    "flake8>=7.1.1",
+    "mypy>=1.14.1",
+    "pytest>=8.3.4",
+    "pytest-cov>=5.0.0",
+    "pytest-mypy-plugins>=3.1.2",
+    "ruff>=0.9.4",
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 
 [tool.pytest.ini_options]
@@ -52,11 +55,9 @@ markers = [
     "cc: marks a test as requiring a C compiler"
 ]
 
-
 [tool.coverage.run]
 source = ["dataclasses_struct/"]
 omit = ["dataclasses_struct/ext/**/*.py", "dataclasses_struct/sizes.py"]
-
 
 [tool.ruff]
 line-length = 79
@@ -70,8 +71,3 @@ select = [
     "RUF", # ruff-specific
     "UP", # pyupgrade
 ]
-
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
