github: use uv instead of Poetry

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,53 +28,31 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Specify Poetry dependency
-        run: echo 'poetry==1.8.2' > requirements.txt
-
       - name: Set up Python ${{ matrix.pyversion }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.pyversion }}
-          cache: 'pip'
 
-      - name: Install Poetry
-        run: pip install -r requirements.txt
-
-      - name: Configure Poetry
-        run: poetry config virtualenvs.in-project true
-
-      - name: Restore virtualenv cache
-        uses: actions/cache/restore@v4
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v5
         with:
-          path: ./.venv
-          key: ${{ matrix.image }}-py${{ matrix.pyversion }}-venv-${{ hashFiles('**/poetry.lock') }}
-
-      - name: Install dependencies
-        run: poetry install -vvv --with dev --no-interaction --no-root
-
-      - name: Save virtualenv cache
-        uses: actions/cache/save@v4
-        with:
-          path: ./.venv
-          key: ${{ matrix.image }}-py${{ matrix.pyversion }}-venv-${{ hashFiles('**/poetry.lock') }}
-
-      - name: Install package
-        run: poetry install -vvv --no-interaction --only-root
+          version: "0.5.26"
+          enable-cache: true
 
       - name: Lint
         run: |
-          poetry run flake8 --exclude .venv &&
-          poetry run ruff check --exclude .venv .
+          uv run --locked flake8 --exclude .venv
+          uv run --locked ruff check
 
       - name: Python type checking
-        run: poetry run mypy
+        run: uv run --locked mypy
 
       - name: Configure MSVC
         uses: ilammy/msvc-dev-cmd@v1
         if: matrix.os == 'Windows'
 
       - name: Run tests
-        run: poetry run pytest --cov --cov-report=xml
+        run: uv run --locked pytest --cov --cov-report=xml
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
