Exclude .venv dir in flake8 config

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Lint
         run: |
-          uv run --locked flake8 --exclude .venv
+          uv run --locked flake8
           uv run --locked ruff check
 
       - name: Python type checking
