--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,8 @@ jobs:
     defaults:
       run:
         shell: bash
+    env:
+      UV_LOCKED: true
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -39,20 +41,23 @@ jobs:
           version: "0.5.26"
           enable-cache: true
 
+      - name: Install Python dependencies
+        run: uv sync
+
       - name: Lint
         run: |
-          uv run --locked flake8
-          uv run --locked ruff check
+          uv run flake8
+          uv run ruff check
 
       - name: Python type checking
-        run: uv run --locked mypy
+        run: uv run mypy
 
       - name: Configure MSVC
         uses: ilammy/msvc-dev-cmd@v1
         if: matrix.os == 'Windows'
 
       - name: Run tests
-        run: uv run --locked pytest --cov --cov-report=xml
+        run: uv run pytest --cov --cov-report=xml
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
