--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,10 @@ python = "^3.8.1"
 typing-extensions = "^4.5.0"
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.1.1"
+mypy = [
+    { version = "^1.15.0", python = ">=3.9,<4.0.0" },
+    { version = "^1.14.1", python = "<3.9" },
+]
 pytest = "^7.2.2"
 pytest-cov = "^4.0.0"
 pytest-mypy-plugins = "^1.10.1"
