--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,15 @@ on:
     branches: ["main"]
 
 jobs:
+  pre-commit-checks:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+      - name: Run pre-commit checks
+        uses: pre-commit/action@v3.0.1
   tests:
+    needs: pre-commit-checks
     strategy:
       matrix:
         pyversion: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
@@ -43,11 +51,6 @@ jobs:
 
       - name: Install Python dependencies
         run: uv sync
-
-      - name: Lint
-        run: |
-          uv run ruff format --check
-          uv run ruff check
 
       - name: Python type checking
         run: uv run mypy
