github: run pytest with color

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,7 +60,7 @@ jobs:
         if: matrix.os == 'Windows'
 
       - name: Run tests
-        run: uv run pytest --cov --cov-report=xml
+        run: uv run pytest --color=yes --cov --cov-report=xml
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
