--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,11 @@ dev = [
     "pytest-mypy-plugins>=3.1.2",
     "ruff>=0.9.4",
 ]
+docs = [
+    "mkdocs-material>=9.6.14",
+    "mkdocstrings[python]>=0.29.1",
+    "ruff>=0.9.4",
+]
 
 [build-system]
 requires = ["hatchling"]
