docs: document length-prefixed bytes arrays and null-terminated strings

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,8 @@ markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - pymdownx.superfences
+  - pymdownx.details
   - pymdownx.magiclink
+  - admonition
 watch:
   - dataclasses_struct
