--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: ["*"]
 
+env:
+  UV_VERSION: "0.9.16"
+
 jobs:
   pre-commit-checks:
     runs-on: ubuntu-latest
@@ -45,9 +48,9 @@ jobs:
           python-version: ${{ matrix.pyversion }}
 
       - name: Setup uv
-        uses: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@v7
         with:
-          version: "0.7.12"
+          version: ${{ env.UV_VERSION }}
           enable-cache: true
 
       - name: Install Python dependencies
@@ -81,13 +84,14 @@ jobs:
         with:
           python-version: "3.12"
       - name: Setup uv
-        uses: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@v7
         with:
-          version: "0.7.12"
+          version: ${{ env.UV_VERSION }}
           enable-cache: true
           cache-dependency-glob: requirements-docs.txt
+          activate-environment: true
       - name: Install Python dependencies
-        run: uv pip install --system -r requirements-docs.txt
+        run: uv pip install -r requirements-docs.txt
       - name: Configure mkdocs for GitHub Pages
         run: |
           sed -i 's,^site_url: .*$,site_url: https://harrymander.xyz/dataclasses-struct/,g' mkdocs.yml
